Allow passing in origin and typeFilter to api. fixed scrollbar bug. Allow starting survey from homepage question.

--- a/app/src/styles.scss
+++ b/app/src/styles.scss
@@ -66,3 +66,8 @@ a {
 .help-icon:hover {
     cursor: pointer;
 }
+
+
+textarea, input {
+    overflow: visible;
+}
